Minor change to css, trying to fix modal. Size was fine hosted locally but too big once hosted on Netlify

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -73,7 +73,7 @@
 
 .modal-img {
   max-width: 90vw;
-  max-height: 90vw;
+  max-height: 90vh;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   background: #fff;
